# fireball

./: .gitignore  .gitmodules  CMakeLists.txt  readme.md
src/: camera.h  client.cpp  extern.cpp  main.cpp  math.h  model.h  model_manager.cpp  model_manager.h  pipeline.h  server.cpp  texture_manager.cpp  texture_manager.h
src/asset/: model.h  model_manager.cpp  model_manager.h  texture_manager.cpp  texture_manager.h
src/client/: client.cpp  scene.cpp
src/core/: physics.cpp  physics.h
src/fireball/: extern.cpp
src/fireball/asset/: model.h  model_manager.cpp  model_manager.h  texture_manager.cpp  texture_manager.h
src/fireball/core/: physics.cpp  physics.h
src/fireball/networking/: client.cpp  client.h  network_protocol.h  networking.h  server.h
src/fireball/renderer/: pipeline.h  vk_backend.cpp  vk_backend.h  vk_debug_backend.h  vk_types.h
src/fireball/scene/: components.h  entity.h  scene.cpp  scene.h  serializer.h
src/fireball/util/: time.h  types.h
src/renderer/: vk_backend.cpp  vk_backend.h  vk_debug_backend.h  vk_types.h  vk_util.cpp  vk_util.h
src/scene/: components.h  entity.h  scene.cpp  scene.h
src/server/: scene.cpp  server.cpp
src/shaders/: debug.frag  debug.vert  gradient.comp  gradient_color.comp  light.h  main.frag  main.vert  mesh.h  mesh_cull.comp  sky.comp  tri.frag  tri_mesh.vert
src/util/: math.h
